--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,39 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Gio Lui</title>
 </head>
+
 <body>
-    
-    <H1>Hello</H1>
+
+    <nav class="navbar">
+        <div class="navbar__container">
+            <a href="#" id="navbar__logo">NEXT</a>
+            <div class="navbar__toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="navbar__menu">
+                <li class="navbar__item">
+                    <a href="#" class="navbar__links">
+                        Home
+                    </a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#" class="navbar__links">
+                        Work
+                    </a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#" class="navbar__links">
+                        Contact
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
 
-<script src="./app.js" type="text/javascript"></script>      
+    <script src="./app.js" type="text/javascript"></script>
 </body>
+
 </html>
