--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="#" id="navbar__logo">NEXT</a>
+            <a href="#" id="navbar__logo">GIO</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -21,17 +21,17 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="#" class="navbar__links">
+                    <a href="#" class="navbar__link">
                         Home
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#" class="navbar__links">
+                    <a href="#" class="navbar__link">
                         Work
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#" class="navbar__links">
+                    <a href="#" class="navbar__link">
                         Contact
                     </a>
                 </li>
