--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
                         Contact
                     </a>
                 </li>
+                <li class="navbar__btn">
+                    <a href="#" class="button">
+                        Work
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
