--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <title>Gio Lui</title>
 </head>
 
@@ -13,7 +15,7 @@
 
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="#" id="navbar__logo">GIO</a>
+            <a href="#" id="navbar__logo"><i class="fas fa-bug"></i> GIO</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -22,22 +24,17 @@
             <ul class="navbar__menu">
                 <li class="navbar__item">
                     <a href="#" class="navbar__link">
-                        Home
+                        <i class="fas fa-home"></i>Home
                     </a>
                 </li>
                 <li class="navbar__item">
                     <a href="#" class="navbar__link">
-                        Work
-                    </a>
-                </li>
-                <li class="navbar__item">
-                    <a href="#" class="navbar__link">
-                        Contact
+                        <i class="fas fa-briefcase"></i>Projects
                     </a>
                 </li>
                 <li class="navbar__btn">
                     <a href="#" class="button">
-                        Work
+                        Contact
                     </a>
                 </li>
             </ul>
