--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 
+    <!-- NAV -->
     <nav class="navbar">
         <div class="navbar__container">
             <a href="#" id="navbar__logo"><i class="fas fa-bug"></i> GIO</a>
@@ -40,6 +41,23 @@
             </ul>
         </div>
     </nav>
+
+    <!-- HERO -->
+    <div class="main">
+        <div class="main__container">
+            <div class="main__content">
+                <h1>Beautifuly</h1>
+                <h2>Crafted Web Experiences</h2>
+                <p>by Gio Lui</p>
+                <button class="main__btn">
+                    <a href="#">Hire Me</a>
+                </button>
+            </div>
+            <div class="main__img--container">
+                <img src="./assets/img/pic1.svg" alt="SVG animated image of professional business" id="main__img">
+            </div>
+        </div>
+    </div>
 
 
     <script src="./app.js" type="text/javascript"></script>
