--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- NAV -->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="#" id="navbar__logo"><i class="fas fa-bug"></i> GIO</a>
+            <a href="index.html" id="navbar__logo"><i class="fas fa-kiwi-bird"></i> GIO</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -34,8 +34,11 @@
                     </a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="#" class="button">
-                        Contact
+                    <a href="#" target="_blank" class="button">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" target="_blank" class="button">
+                        <i class="fab fa-linkedin"></i>
                     </a>
                 </li>
             </ul>
