--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             <div class="main__content">
                 <h1>Beautifuly</h1>
                 <h2>Crafted Web Experiences</h2>
-                <p>by Gio Lui</p>
-                <button class="main__btn">
-                    <a href="#">Hire Me</a>
-                </button>
+                <div class="meet">
+                    <i class="fas fa-sort-down fa-2x"></i>
+                    <h3><a href="#" class="hire-me">Hire Me</a> <span> (ﾉ^ヮ^)ﾉ*:･ﾟ✧</span></h3>
+                </div>
             </div>
             <div class="main__img--container">
                 <img src="./assets/img/pic1.svg" alt="SVG animated image of professional business" id="main__img">
