--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h1>Beautifuly</h1>
                 <h2>Crafted Web Experiences</h2>
                 <div class="meet">
-                    <i class="fas fa-sort-down fa-2x"></i>
+                    <i class="fas fa-arrow-right"></i>
                     <h3><a href="#" class="hire-me">Hire Me</a> <span> (ﾉ^ヮ^)ﾉ*:･ﾟ✧</span></h3>
                 </div>
             </div>
