--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         <div class="main__container">
             <div class="main__content">
                 <h1>Beautifuly</h1>
-                <h2>Crafted Web Experiences</h2>
+                <h2>Crafted Web</h2>
+                <h2>Experiences</h2>
                 <div class="meet">
                     <i class="fas fa-arrow-right"></i>
                     <h3><a href="#" class="hire-me">Hire Me</a> <span> (ﾉ^ヮ^)ﾉ*:･ﾟ✧</span></h3>
