messing with logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- NAV -->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="index.html" id="navbar__logo"><i class="fas fa-kiwi-bird"></i> GIO</a>
+            <a href="index.html" id="navbar__logo"><i class="fas fa-kiwi-bird"></i> Gio</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
