--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
         </div>
     </div>
 
+    <!-- Projects -->
+
+    <div class="projects__main">
+        
+    </div>
+
 
     <script src="./app.js" type="text/javascript"></script>
 </body>
