--- a/index.html
+++ b/index.html
@@ -61,12 +61,15 @@
                 <img src="./assets/img/pic1.svg" alt="SVG animated image of professional business" id="main__img">
             </div>
         </div>
+        <div class="arrow-container">
+            <i class="fas fa-sort-down fa-2x"></i>
+        </div>
     </div>
 
     <!-- Projects -->
 
     <div class="projects__main">
-        
+
     </div>
 
 
