added section and assets

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </nav>
 
     <!-- HERO -->
-    <div class="main">
+    <section class="main">
         <div class="main__container">
             <div class="main__content">
                 <h1>Beautifuly</h1>
@@ -64,13 +64,69 @@
         <div class="arrow-container">
             <i class="fas fa-sort-down fa-2x"></i>
         </div>
-    </div>
+    </section>
 
-    <!-- Projects -->
+    <!-- Portfolio -->
 
-    <div class="projects__main">
-
-    </div>
+    <section class="portfolio">
+        <div class="portfolio-container transition 3">
+            <img src="./assets/img/LinaWebsiteScreenshot.jpg" alt="Project One Screenshot">
+            <div class="portfolio-text">
+                <div class="inner">
+                    <p class="subtitle">Project</p>
+                    <p class="featured-title">LinaLens.com</p>
+                    <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta natus
+                        optio, eaque modi doloribus quis maxime magnam sapiente itaque id!</p>
+                    <div class="button-container">
+                        <button class="project-one-demo">
+                            <a href="https://giolorenzo.github.io/Lina-Mohamed-Project/" target="_blank">Demo</a>
+                        </button>
+                        <button class="project-one-code">
+                            <a href="https://github.com/GioLorenzo/Lina-Mohamed-Project" target="_blank">Code</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="portfolio-container transition 3">
+            <img src="./assets/img/projecttwo.jpg" alt="Project Two Screenshot">
+            <div class="portfolio-text">
+                <div class="inner">
+                    <p class="subtitle">API Weather App</p>
+                    <p class="featured-title">Weather App</p>
+                    <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta natus
+                        optio, eaque modi doloribus quis maxime magnam sapiente itaque id!</p>
+                    <div class="button-container">
+                        <button class="project-one-demo">
+                            <a href="https://giolorenzo.github.io/js-weather-app-using-api/" target="_blank">Demo</a>
+                        </button>
+                        <button class="project-one-code">
+                            <a href="https://github.com/GioLorenzo/js-weather-app-using-api" target="_blank">Code</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="portfolio-container transition 3">
+            <img src="./assets/img/projectthree.jpg" alt="Project Three Screenshot">
+            <div class="portfolio-text">
+                <div class="inner">
+                    <p class="subtitle">Animations</p>
+                    <p class="featured-title">FormAnimate.com</p>
+                    <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta natus
+                        optio, eaque modi doloribus quis maxime magnam sapiente itaque id!</p>
+                    <div class="button-container">
+                        <button class="project-one-demo">
+                            <a href="#">Demo</a>
+                        </button>
+                        <button class="project-one-code">
+                            <a href="https://github.com/GioLorenzo/Full-Page-Form-Animation" target="_blank">Code</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="./app.js" type="text/javascript"></script>
