--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <!-- Portfolio -->
 
     <section class="portfolio">
+        <h1 class="transition3 work-headline">Selected Works</h1>
         <div class="portfolio-container transition 3">
             <img src="./assets/img/LinaWebsiteScreenshot.jpg" alt="Project One Screenshot">
             <div class="portfolio-text">
