--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         optio, eaque modi doloribus quis maxime magnam sapiente itaque id!</p>
                     <div class="button-container">
                         <button class="project-one-demo">
-                            <a href="#">Demo</a>
+                            <a href="https://giolorenzo.github.io/Full-Page-Form-Animation/" target='_blank'>Demo</a>
                         </button>
                         <button class="project-one-code">
                             <a href="https://github.com/GioLorenzo/Full-Page-Form-Animation" target="_blank">Code</a>
