--- a/index.html
+++ b/index.html
@@ -130,6 +130,49 @@
     </section>
 
 
+    <!-- FOOTER -->
+    <section class="footer__container">
+        <div class="footer__links">
+            <div class="footer__link--wrapper">
+                <div class="footer__link--items">
+                    <h2>Giordano Lui</h2>
+                    <a href="">Home</a>
+                    <a href="">Contact</a>
+                    <a href="">Works</a>
+                </div>
+                <div class="footer__link--items">
+                    <h2>Giordano Lui</h2>
+                    <a href="">Home</a>
+                    <a href="">Contact</a>
+                    <a href="">Works</a>
+                </div>
+            </div>
+            <div class="footer__link--wrapper">
+                <div class="footer__link--items">
+                    <h2>Giordano Lui</h2>
+                    <a href="">Home</a>
+                    <a href="">Contact</a>
+                    <a href="">Works</a>
+                </div>
+                <div class="footer__link--items">
+                    <h2>Giordano Lui</h2>
+                    <a href="">Home</a>
+                    <a href="">Contact</a>
+                    <a href="">Works</a>
+                </div>
+            </div>
+            <div class="social__media">
+                <div class="social__media--wrap">
+                    <div class="footer__logo">
+                        <a href="#" id="footer__logo"><i class="fas fa-kiwi-bird"></i></a>
+                    </div>
+                    <p class="website__right">&copy; Gio Lorenzo 2021. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <script src="./app.js" type="text/javascript"></script>
 </body>
 
