--- a/index.html
+++ b/index.html
@@ -167,6 +167,14 @@
                         <a href="#" id="footer__logo"><i class="fas fa-kiwi-bird"></i></a>
                     </div>
                     <p class="website__right">&copy; Gio Lorenzo 2021. All rights reserved.</p>
+                    <div class="social__icons">
+                        <a href="#" class="social__icon--link" target="_blank">
+                            <i class="fab fa-github" ></i>
+                        </a>
+                        <a href="#" class="social__icon--link" target="_blank">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
