--- a/index.html
+++ b/index.html
@@ -135,32 +135,13 @@
         <div class="footer__links">
             <div class="footer__link--wrapper">
                 <div class="footer__link--items">
-                    <h2>Giordano Lui</h2>
-                    <a href="">Home</a>
-                    <a href="">Contact</a>
-                    <a href="">Works</a>
-                </div>
-                <div class="footer__link--items">
-                    <h2>Giordano Lui</h2>
+                    <h2>GIORDANO LORENZO</h2>
                     <a href="">Home</a>
                     <a href="">Contact</a>
                     <a href="">Works</a>
                 </div>
             </div>
-            <div class="footer__link--wrapper">
-                <div class="footer__link--items">
-                    <h2>Giordano Lui</h2>
-                    <a href="">Home</a>
-                    <a href="">Contact</a>
-                    <a href="">Works</a>
-                </div>
-                <div class="footer__link--items">
-                    <h2>Giordano Lui</h2>
-                    <a href="">Home</a>
-                    <a href="">Contact</a>
-                    <a href="">Works</a>
-                </div>
-            </div>
+
             <div class="social__media">
                 <div class="social__media--wrap">
                     <div class="footer__logo">
@@ -169,7 +150,7 @@
                     <p class="website__right">&copy; Gio Lorenzo 2021. All rights reserved.</p>
                     <div class="social__icons">
                         <a href="#" class="social__icon--link" target="_blank">
-                            <i class="fab fa-github" ></i>
+                            <i class="fab fa-github"></i>
                         </a>
                         <a href="#" class="social__icon--link" target="_blank">
                             <i class="fab fa-linkedin"></i>
