--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="footer__links">
             <div class="footer__link--wrapper">
                 <div class="footer__link--items">
-                    <h2>GIORDANO LORENZO</h2>
+                    <h2>&copy; Giordano Lorenzo</h2>
                     <a href="">Home</a>
                     <a href="">Contact</a>
                     <a href="">Works</a>
@@ -149,10 +149,10 @@
                     </div>
                     <p class="website__right">&copy; Gio Lorenzo 2021. All rights reserved.</p>
                     <div class="social__icons">
-                        <a href="#" class="social__icon--link" target="_blank">
+                        <a href="https://github.com/GioLorenzo" class="social__icon--link" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="#" class="social__icon--link" target="_blank">
+                        <a href="https://www.linkedin.com/in/giordano-lui-647021200/" class="social__icon--link" target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </div>
