--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#" class="navbar__link">
+                    <a href="#work" class="navbar__link">
                         <i class="fas fa-briefcase"></i>Projects
                     </a>
                 </li>
@@ -68,8 +68,8 @@
 
     <!-- Portfolio -->
 
-    <section class="portfolio">
-        <h1 class="transition3 work-headline">Selected Works</h1>
+    <section class="portfolio" id="work">
+        <h1 class="transition3 work-headline" >Selected Works</h1>
         <div class="portfolio-container transition 3">
             <img src="./assets/img/LinaWebsiteScreenshot.jpg" alt="Project One Screenshot">
             <div class="portfolio-text">
@@ -136,9 +136,9 @@
             <div class="footer__link--wrapper">
                 <div class="footer__link--items">
                     <h2>&copy; Giordano Lorenzo</h2>
-                    <a href="">Home</a>
-                    <a href="">Contact</a>
-                    <a href="">Works</a>
+                    <a href="#">Home</a>
+                    <a href="#">Contact</a>
+                    <a href="#work">Works</a>
                 </div>
             </div>
 
