--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="#" class="navbar__link">
+                    <a href="#" class="navbar__link home__link">
                         <i class="fas fa-home"></i>Home
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#work" class="navbar__link">
+                    <a href="#work" class="navbar__link work__nav__link">
                         <i class="fas fa-briefcase"></i>Projects
                     </a>
                 </li>
