--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- NAV -->
-    <nav class="navbar">
+    <nav class="navbar anim1">
         <div class="navbar__container">
             <a href="index.html" id="navbar__logo"><i class="fas fa-kiwi-bird"></i> Gio</a>
             <div class="navbar__toggle" id="mobile-menu">
@@ -47,7 +47,7 @@
 
     <!-- HERO -->
     <section class="main">
-        <div class="main__container">
+        <div class="main__container anim2">
             <div class="main__content">
                 <h1>Beautifuly</h1>
                 <h2>Crafted Web</h2>
@@ -57,7 +57,7 @@
                     <h3><a href="#" class="hire-me">Hire Me</a> <span> (ﾉ^ヮ^)ﾉ*:･ﾟ✧</span></h3>
                 </div>
             </div>
-            <div class="main__img--container">
+            <div class="main__img--container anim3">
                 <img src="./assets/img/pic1.svg" alt="SVG animated image of professional business" id="main__img">
             </div>
         </div>
@@ -162,7 +162,8 @@
     </section>
 
 
-    <script src="./app.js" type="text/javascript"></script>
+<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js" type="text/javascript"></script>
+<script src="./app.js" type="text/javascript"></script>
 </body>
 
 </html>
