--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <img src="./assets/img/pic1.svg" alt="SVG animated image of professional business" id="main__img">
             </div>
         </div>
-        <div class="arrow-container">
+        <div class="arrow-container anim4">
             <i class="fas fa-sort-down fa-2x"></i>
         </div>
     </section>
@@ -69,7 +69,7 @@
     <!-- Portfolio -->
 
     <section class="portfolio" id="work">
-        <h1 class="transition3 work-headline" >Selected Works</h1>
+        <h1 class="transition3 work-headline anim5" >Selected Works</h1>
         <div class="portfolio-container transition 3">
             <img src="./assets/img/LinaWebsiteScreenshot.jpg" alt="Project One Screenshot">
             <div class="portfolio-text">
