--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js" type="text/javascript">
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>	
     <script src="./app.js" type="text/javascript"></script>
 </body>
 
