--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                     </a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="#" target="_blank" class="button">
+                    <a href="https://github.com/GioLorenzo" target="_blank" class="button">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="#" target="_blank" class="button">
+                    <a href="https://www.linkedin.com/in/giordano-lui-647021200/" target="_blank" class="button">
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </li>
