--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                 <div class="footer__link--items">
                     <h2>&copy; Giordano Lorenzo</h2>
                     <a href="#">Home</a>
-                    <a href="#">Contact</a>
                     <a href="#work">Works</a>
+                    <a href="#">Hire Me</a>
                 </div>
             </div>
 
