--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
         </div>
         <div class="arrow-container anim4">
-           <a href=""><i class="fas fa-sort-down fa-2x"></i></a> 
+           <a href="#work"><i class="fas fa-sort-down fa-2x"></i></a> 
         </div>
     </section>
 
