--- a/index.html
+++ b/index.html
@@ -167,6 +167,44 @@
                 </div>
             </div>
         </div>
+        <div class="portfolio-container transition 3">
+            <img src="./assets/img/project4.jpg" alt="Project Four Screenshot">
+            <div class="portfolio-text">
+                <div class="inner">
+                    <p class="subtitle">Resposive Mock Site</p>
+                    <p class="featured-title">Leika Cameras</p>
+                    <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta natus
+                        optio, eaque modi doloribus quis maxime magnam sapiente itaque id!</p>
+                    <div class="button-container">
+                        <button class="project-one-demo">
+                            <a href="https://giolorenzo.github.io/responsive-camera-site/" target='_blank'>Demo</a>
+                        </button>
+                        <button class="project-one-code">
+                            <a href="https://github.com/GioLorenzo/responsive-camera-site" target="_blank">Code</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="portfolio-container transition 3">
+            <img src="./assets/img/project5.jpg" alt="Project Five Screenshot">
+            <div class="portfolio-text">
+                <div class="inner">
+                    <p class="subtitle">Typeography & Animation</p>
+                    <p class="featured-title">Beautiful Landing Page</p>
+                    <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta natus
+                        optio, eaque modi doloribus quis maxime magnam sapiente itaque id!</p>
+                    <div class="button-container">
+                        <button class="project-one-demo">
+                            <a href="https://giolorenzo.github.io/modern-trendy-website/" target='_blank'>Demo</a>
+                        </button>
+                        <button class="project-one-code">
+                            <a href="https://github.com/GioLorenzo/modern-trendy-website" target="_blank">Code</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
