--- a/index.html
+++ b/index.html
@@ -205,6 +205,25 @@
                 </div>
             </div>
         </div>
+        <div class="portfolio-container transition 3">
+            <img src="./assets/img/project5.jpg" alt="Project Five Screenshot">
+            <div class="portfolio-text">
+                <div class="inner">
+                    <p class="subtitle">Local Storage & APIs</p>
+                    <p class="featured-title">Momentum Mock</p>
+                    <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta natus
+                        optio, eaque modi doloribus quis maxime magnam sapiente itaque id!</p>
+                    <div class="button-container">
+                        <button class="project-one-demo">
+                            <a href="https://giolorenzo.github.io/me-trying-to-recreate-momentum--using-local-storage-and-APIs/" target='_blank'>Demo</a>
+                        </button>
+                        <button class="project-one-code">
+                            <a href="https://github.com/GioLorenzo/me-trying-to-recreate-momentum--using-local-storage-and-APIs" target="_blank">Code</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
