added form page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h2>Experiences</h2>
                 <div class="meet">
                     <i class="fas fa-arrow-right"></i>
-                    <h3><a href="#" class="hire-me">Hire Me</a> <span> (ﾉ^ヮ^)ﾉ*:･ﾟ✧</span></h3>
+                    <h3><a href="contact.html" class="hire-me">Hire Me</a> <span> (ﾉ^ヮ^)ﾉ*:･ﾟ✧</span></h3>
                 </div>
             </div>
             <div class="main__img--container anim3">
