--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 
   <div class="form-container">
     <form action="https://formspree.io/f/xeqvrbjk" method="POST">
-      <h2></h2>
+      <h2>Looking forward <br> to hearing from you!</h2>
       <label>
         Your email:
         <input type="email" name="_replyto">
