--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,9 @@
 
       <!-- your other form fields go here -->
 
-      <button type="submit">Send</button>
+      <button type="submit">
+        <i class="fas fa-paper-plane fa-2x"></i>
+      </button>
     </form>
   </div>
 
