--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="#" class="navbar__link home__link">
+                    <a href="index.html" class="navbar__link home__link">
                         <i class="fas fa-home"></i>Home
                     </a>
                 </li>
