fixed mobile layout

--- a/index.html
+++ b/index.html
@@ -124,8 +124,11 @@
                 <div class="inner">
                     <p class="subtitle">Project</p>
                     <p class="featured-title">LinaLens.com</p>
-                    <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta natus
-                        optio, eaque modi doloribus quis maxime magnam sapiente itaque id!</p>
+                    <p class="featured-desc">Static landing page for local NY graphic artist collection. In this
+                        application I wanted to showcase load in animations as well as Ui/Ux design and feel using
+                        vanilla Javascript (no libraries).
+                        Relies mainly on animation functions and event handling.
+                    </p>
                     <div class="button-container">
                         <button class="project-one-demo">
                             <a href="https://giolorenzo.github.io/Lina-Mohamed-Project/" target="_blank">Demo</a>
@@ -143,8 +146,7 @@
                 <div class="inner">
                     <p class="subtitle">API Weather App</p>
                     <p class="featured-title">Weather App</p>
-                    <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta natus
-                        optio, eaque modi doloribus quis maxime magnam sapiente itaque id!</p>
+                    <p class="featured-desc">Simple weather app using local geolocation and fetching data from a third party API.</p>
                     <div class="button-container">
                         <button class="project-one-demo">
                             <a href="https://giolorenzo.github.io/js-weather-app-using-api/" target="_blank">Demo</a>
@@ -162,8 +164,7 @@
                 <div class="inner">
                     <p class="subtitle">Animations</p>
                     <p class="featured-title">FormAnimate.com</p>
-                    <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta natus
-                        optio, eaque modi doloribus quis maxime magnam sapiente itaque id!</p>
+                    <p class="featured-desc">Form animations and validation to showcase Ui/Ux proficiency.</p>
                     <div class="button-container">
                         <button class="project-one-demo">
                             <a href="https://giolorenzo.github.io/Full-Page-Form-Animation/" target='_blank'>Demo</a>
@@ -181,8 +182,7 @@
                 <div class="inner">
                     <p class="subtitle">Resposive Mock Site</p>
                     <p class="featured-title">Leika Cameras</p>
-                    <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta natus
-                        optio, eaque modi doloribus quis maxime magnam sapiente itaque id!</p>
+                    <p class="featured-desc">A static, responsive, mobile-friendly landing page</p>
                     <div class="button-container">
                         <button class="project-one-demo">
                             <a href="https://giolorenzo.github.io/responsive-camera-site/" target='_blank'>Demo</a>
@@ -200,8 +200,7 @@
                 <div class="inner">
                     <p class="subtitle">Typeography & Animation</p>
                     <p class="featured-title">Beautiful Landing Page</p>
-                    <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta natus
-                        optio, eaque modi doloribus quis maxime magnam sapiente itaque id!</p>
+                    <p class="featured-desc">Showcasing typeography and animations.</p>
                     <div class="button-container">
                         <button class="project-one-demo">
                             <a href="https://giolorenzo.github.io/modern-trendy-website/" target='_blank'>Demo</a>
