animations for projects

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
         </svg>
     </div>
 
-    <section class="portfolio" id="work">
-        <h1 class="transition3 work-headline anim5">Selected Works</h1>
-        <div class="portfolio-container transition 3">
+    <section class="portfolio" >
+        <h1 class="transition3 work-headline anim5" id="work">Selected Works</h1>
+        <div class="portfolio-container anim6">
             <img src="./assets/img/LinaWebsiteScreenshot.jpg" alt="Project One Screenshot">
             <div class="portfolio-text">
                 <div class="inner">
@@ -140,7 +140,7 @@
                 </div>
             </div>
         </div>
-        <div class="portfolio-container transition 3">
+        <div class="portfolio-container anim7">
             <img src="./assets/img/projecttwo.jpg" alt="Project Two Screenshot">
             <div class="portfolio-text">
                 <div class="inner">
@@ -158,7 +158,7 @@
                 </div>
             </div>
         </div>
-        <div class="portfolio-container transition 3">
+        <div class="portfolio-container anim8">
             <img src="./assets/img/projectthree.jpg" alt="Project Three Screenshot">
             <div class="portfolio-text">
                 <div class="inner">
@@ -176,7 +176,7 @@
                 </div>
             </div>
         </div>
-        <div class="portfolio-container transition 3">
+        <div class="portfolio-container anim9">
             <img src="./assets/img/project4.jpg" alt="Project Four Screenshot">
             <div class="portfolio-text">
                 <div class="inner">
@@ -194,7 +194,7 @@
                 </div>
             </div>
         </div>
-        <div class="portfolio-container transition 3">
+        <div class="portfolio-container anim10">
             <img src="./assets/img/project5.jpg" alt="Project Five Screenshot">
             <div class="portfolio-text">
                 <div class="inner">
