--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
                 <div class="inner">
                     <p class="subtitle">Project</p>
                     <p class="featured-title">LinaLens.com</p>
-                    <p class="featured-desc">Static landing page for local NY graphic artist collection. In this
-                        application I wanted to showcase load in animations as well as Ui/Ux design and feel using
+                    <p class="featured-desc">Showcasing load in animations and Ui/Ux design using
                         vanilla Javascript (no libraries).
                         Relies mainly on animation functions and event handling.
                     </p>
