--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a href="https://github.com/GioLorenzo" target="_blank" class="button">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/giordano-lui-647021200/" target="_blank" class="button">
+                    <a href="https://www.linkedin.com/in/giordano-lui-647021200/" target="_blank" class="button last-button">
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </li>
