--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                         <a href="https://github.com/GioLorenzo" class="social__icon--link" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/giordano-lui-647021200/" class="social__icon--link"
+                        <a href="https://www.linkedin.com/in/giordano-lui-647021200/" class="social__icon--link last-button"
                             target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
