--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                     <a href="https://github.com/GioLorenzo" target="_blank" class="button">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/giordano-lui-647021200/" target="_blank" class="button last-button">
+                    <a href="https://www.linkedin.com/in/giordano-lui-647021200/" target="_blank"
+                        class="button last-button">
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </li>
@@ -116,7 +117,7 @@
         </svg>
     </div>
 
-    <section class="portfolio" >
+    <section class="portfolio">
         <h1 class="transition3 work-headline anim5" id="work">Selected Works</h1>
         <div class="portfolio-container anim6">
             <img src="./assets/img/LinaWebsiteScreenshot.jpg" alt="Project One Screenshot">
@@ -145,7 +146,8 @@
                 <div class="inner">
                     <p class="subtitle">API Weather App</p>
                     <p class="featured-title">Weather App</p>
-                    <p class="featured-desc">Simple weather app using local geolocation and fetching data from a third party API.</p>
+                    <p class="featured-desc">Simple weather app using local geolocation and fetching data from a third
+                        party API.</p>
                     <div class="button-container">
                         <button class="project-one-demo">
                             <a href="https://giolorenzo.github.io/js-weather-app-using-api/" target="_blank">Demo</a>
@@ -220,9 +222,11 @@
             <div class="footer__link--wrapper">
                 <div class="footer__link--items">
                     <h2>&copy; Giordano Lorenzo</h2>
-                    <a href="#">Home</a>
-                    <a href="#work">Works</a>
-                    <a href="#">Hire Me</a>
+                    <div class="footer-links-wrap">
+                        <a href="#">Home</a>
+                        <a href="#work">Works</a>
+                        <a href="#">Hire Me</a>
+                    </div>
                 </div>
             </div>
 
@@ -236,8 +240,8 @@
                         <a href="https://github.com/GioLorenzo" class="social__icon--link" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/giordano-lui-647021200/" class="social__icon--link last-button"
-                            target="_blank">
+                        <a href="https://www.linkedin.com/in/giordano-lui-647021200/"
+                            class="social__icon--link last-button" target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </div>
