--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
                 <div class="footer__link--items">
                     <h2>&copy; Giordano Lorenzo</h2>
                     <div class="footer-links-wrap">
-                        <a href="#">Home</a>
+                        <a href="index.html">Home</a>
                         <a href="#work">Works</a>
-                        <a href="#">Hire Me</a>
+                        <a href="contact.html">Hire Me</a>
                     </div>
                 </div>
             </div>
