--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,11 @@
     </form>
   </div>
 
+
+  <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js" type="text/javascript">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
+  <script src="./app.js" type="text/javascript"></script>
 </body>
 
 </html>
